fix width issues on mobile

--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ body {
     text-transform: uppercase;
     margin: 1rem;
     padding: 2rem;
-    width: 25%;
     display: flex;
     justify-content: center;
     flex-direction: column;
